--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13414,7 +13414,9 @@
                     }
                     
                     try {
+                        // Create date with 12:00 PM time
                         const bcDate = new Date(this.selectedEpisode.EpisodeBCDate);
+                        bcDate.setHours(12, 0, 0, 0); // Set to 12:00 PM
                         const now = new Date();
                         
                         // If date is invalid or in the past, don't show countdown
