--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5633,7 +5633,7 @@
                                 {{ episode.EpisodeNumber }}
                             </td>
                             <!-- <td class="border border-gray-300 px-4 text-lg font-bold py-2 text-center cursor-pointer">{{ episode.EpisodeTitle }}</td> -->
-                            <td class="border border-gray-300 px-4 text-lg font-bold py-2 text-center cursor-pointer transition-all duration-100 hover:bg-yellow-900 active:scale-90" @click="openModal(episode)">{{ episode.EpisodeTitle }}</td>
+                            <td class="border border-gray-300 px-4 text-lg font-bold py-2 text-center cursor-pointer hover:bg-yellow-900" @click="openModal(episode)">{{ episode.EpisodeTitle }}</td>
                         </tr>
                     </tbody>
             
@@ -16148,7 +16148,7 @@
                         document.body.innerHTML = `
                             <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #ff4f4f, #ff7575); animation: fadeIn 1s;">
                                 <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
-                                    <h1 style="color: #fff; font-size: 20px; font-weight: bold; margin-bottom: 10px;">حدث خطأ في فتح الدليل.</h1>
+                                    <h1 style="color: #fff; font-size: 20px; font-weight: bold; margin-bottom: 10px;">حدث خطأ في فتح الدليل.<br><span style="font-size: 16px; color: #ffcccc;">${error && (error.message || error.toString())}</span></h1>
                                     <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; transition: transform 0.3s, box-shadow 0.3s;">
                                         أعد المحاولة
                                     </button>
@@ -16201,6 +16201,7 @@
                     this.selectedCategory = category;
                     this.showDirectWindow = true;
                     this.menuOpen = false;
+                    document.body.style.overflow = 'hidden'; // Block background scrolling
                 },
 
                 resetEpisodesView() {
@@ -16216,6 +16217,7 @@
                 },
 
                 closeDirectWindow() {
+                    document.body.style.overflow = ''; // Restore background scrolling
                     // Store references to the current objects before clearing them
                     const tempEpisode = this.selectedEpisode;
                     const tempManga = this.selectedManga;
