--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -611,7 +611,7 @@
                             
                             <div class="relative">
                                 <input
-                                v-model="searchQuery"
+                                v-model.trim="searchQuery"
                                 type="text"
                                 placeholder="ابحث..."
                                 class="w-full p-2 text-lg bg-gray-700 rounded focus:outline-none focus:ring-2 focus:ring-teal-400"
@@ -790,7 +790,13 @@
                                             </button>
                                         </div>
                                         <div class="flex-grow text-center">
-                                            <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber }}</span>
+                                            <button
+                                                :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')"
+                                                @click="resetStatusForEpisodeManga(); openEpisodeModal(selectedEpisode.EpisodeNumber)"
+                                                class="text-lg font-bold underline text-blue-400 hover:text-blue-300 bg-transparent border-0 cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90"
+                                            >
+                                                {{ selectedEpisode.EpisodeNumber }}
+                                            </button>
                                         </div>
                                         <div class="w-8 flex justify-end">
                                             <button v-if="showPreviousGroupButton" :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToPreviousEpisodeGroup(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
@@ -852,12 +858,12 @@
                                 </legend>
                                 <div v-if="!selectedEpisode" class="grid grid-cols-3 gap-2" dir="ltr">
                                     <button 
-                                    v-for="movie in groupedMovies[activeTab.movies]?.items" 
-                                    :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')"
-                                    @click="selectMovie(movie)" 
-                                    class="bg-amber-700 text-white p-2 rounded hover:bg-green-500 disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
-                                    {{ movie.EpisodeNumber.replace('الفيلم ', '') }}
-                                </button>                                
+                                        v-for="movie in groupedMovies[activeTab.movies]?.items" 
+                                        :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')"
+                                        @click="selectMovie(movie)" 
+                                        class="bg-amber-700 text-white p-2 rounded hover:bg-green-500 disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                        {{ movie.EpisodeNumber.replace('الفيلم ', '') }}
+                                    </button>                                
                                 </div>
                                 <div v-else class="flex flex-col justify-center gap-4">
                                     <div class="flex items-center px-4">
@@ -870,7 +876,13 @@
                                             </button>
                                         </div>
                                         <div class="flex-grow text-center">
-                                            <span class="text-lg font-bold">{{ selectedEpisode.EpisodeNumber.replace('الفيلم ', '') }}</span>
+                                            <button
+                                                :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')"
+                                                @click="resetStatusForEpisodeManga(); openEpisodeModal(selectedEpisode.EpisodeNumber)"
+                                                class="text-lg font-bold underline text-blue-400 hover:text-blue-300 bg-transparent border-0 cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90"
+                                            >
+                                                {{ selectedEpisode.EpisodeNumber.replace('الفيلم ', '') }}
+                                            </button>
                                         </div>
                                         <div class="w-8 flex justify-end">
                                             <button v-if="showPreviousMovieGroupButton" :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" @click="navigateToPreviousMovieGroup(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
@@ -16838,5 +16850,3 @@
     </style>
 </body>
 </html>
-
-
