--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -793,7 +793,7 @@
                                             <button
                                                 :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')"
                                                 @click="preserveSelectedEpisodeOnModalClose = true; resetStatusForEpisodeManga(); openEpisodeModal(selectedEpisode.EpisodeNumber)"
-                                                class="text-lg font-bold underline hover:text-blue-300 bg-transparent border-0 cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90"
+                                                class="text-lg font-bold underline text-yellow-300 bg-transparent border-0 cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90"
                                             >
                                                 {{ selectedEpisode.EpisodeNumber }}
                                             </button>
@@ -879,7 +879,7 @@
                                             <button
                                                 :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')"
                                                 @click="preserveSelectedEpisodeOnModalClose = true; resetStatusForEpisodeManga(); openEpisodeModal(selectedEpisode.EpisodeNumber)"
-                                                class="text-lg font-bold underline hover:text-blue-300 bg-transparent border-0 cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90"
+                                                class="text-lg font-bold underline text-yellow-300 bg-transparent border-0 cursor-pointer disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90"
                                             >
                                                 {{ selectedEpisode.EpisodeNumber.replace('الفيلم ', '') }}
                                             </button>
@@ -5656,7 +5656,7 @@
 
                             <!-- Side Navigation Buttons -->
                             <button
-                                :disabled="!hasPreviousFilteredEpisode || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" 
+                                :disabled="!hasPreviousFilteredEpisode || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending') || preserveSelectedEpisodeOnModalClose" 
                                 @click="fetchPreviousEpisodeByNumber(); resetStatusForEpisodeManga();" 
                                 class="modal-nav-btn absolute top-[55%] transform -translate-y-1/2 rounded-full p-2 md:p-3 disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
                             >
@@ -5665,7 +5665,7 @@
                             
 
                             <button 
-                                :disabled="!hasNextFilteredEpisode || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" 
+                                :disabled="!hasNextFilteredEpisode || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending') || preserveSelectedEpisodeOnModalClose" 
                                 @click="fetchNextEpisodeByNumber(); resetStatusForEpisodeManga();" 
                                 class="modal-nav-btn absolute top-[70%] transform -translate-y-1/2 rounded-full p-2 md:p-3 disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90 z-10"
                             >
@@ -5680,7 +5680,7 @@
                                         <!-- Next Episode Button -->
                                         <button 
                                             v-if="selectedEpisode.EpisodeParts" 
-                                            :disabled="!nextEpisodeExists || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending') || preserveSelectedEpisodeOnModalClose" 
+                                            :disabled="!nextEpisodeExists || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" 
                                             @click="fetchNextEpisode(); resetStatusForEpisodeManga();" 
                                             class="ml-12 disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90"
                                         >
@@ -5690,7 +5690,7 @@
                                         <!-- Previous Episode Button -->
                                         <button 
                                             v-if="selectedEpisode.EpisodeParts" 
-                                            :disabled="!previousEpisodeExists || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending') || preserveSelectedEpisodeOnModalClose" 
+                                            :disabled="!previousEpisodeExists || selectedEpisode.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending')" 
                                             @click="fetchPreviousEpisode(); resetStatusForEpisodeManga();" 
                                             class="disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90"
                                         >
