--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -1213,7 +1213,7 @@
                             </label>
                             <br />
                             <label class="flex items-center space-x-2 transition-all duration-100 active:scale-90">
-                                <input type="radio" v-model="selectedFilter" value="hanazawa" class="scale-150" />
+                                <input type="radio" v-model="selectedFilter" value="criminal_hanzawa" class="scale-150" />
                                 <span class="px-2 font-bold">المجرم هانزاوا ({{ episodeTypeHanazawa }})</span>
                             </label>
                         </fieldset>
