--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -11170,7 +11170,7 @@
                 combinedFilterBadgeClasses() {
                     const isDefaultSelection = this.selectedFilter === 'all' && this.episodeTypeFilter === 'All';
                     return [
-                        'inline-block text-base font-bold px-3 py-1 rounded transition-all duration-100',
+                        'inline-block text-base text-yellow-300 font-bold px-3 py-1 rounded transition-all duration-100',
                         isDefaultSelection ? '' : 'bg-orange-500 text-white'
                     ];
                 },
